fix: featured section bottom spacing

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -92,7 +92,7 @@
       }
       .swiper-pagination {
         position: static;
-        padding-top: 50px;
+        @include padding-vertical(50, 0);
         @include media($md) {
           display: none;
         }
